<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.roommatefinder.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.roommatefinder.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.roommatefinder.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" />
    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.roommatefinder.ui.favourites.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.roommatefinder.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/userFilterFragment"
        android:name="com.example.roommatefinder.ui.filter.UserFilterFragment"
        android:label="fragment_user_filter"
        tools:layout="@layout/fragment_user_filter" />
    <fragment
        android:id="@+id/filtrateUserFragment"
        android:name="com.example.roommatefinder.ui.filter.FiltrateUserFragment"
        android:label="FiltrateUserFragment" />
    <fragment
        android:id="@+id/userPostFragment"
        android:name="com.example.roommatefinder.ui.userPost.UserPostFragment"
        android:label="UserPostFragment" />
</navigation>